# tree_crawler

./: README.md  by_journal.py  count_taxon.ipynb  crawl_out_for_draw.ipynb  doi_info.py  dryad.py  fetch_tree.py  figshare.py  get_dryad_api.py  global_vars.py  journal_list.txt  journal_list_dryad.txt  journal_list_dryad_delete.txt  new_phytologist.py  organize_result.py  organize_treefile.py  output_doi_info_1.py  output_tree_info_2.py  output_treefile_3.py  pubmed.py  pyproject.toml  remove_duplicated.py  split_by_assign_type.py  stat_assign_type.py  stats.py  stats2.py  tree_info.py  utils.py  zenodo.py
data/: genus.csv  other_families.csv  other_orders.csv  plant_families.csv
