[project]
name = "tree-crawler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" }
]
dependencies = [
    "jupyterlab>=4.3.6",
]
readme = "README.md"
requires-python = ">3.12"
license = { text = "AGPL-3.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tree_crawler"]
